# imu-mouse

./: .clang-format  CMakeLists.txt  README.md  prj.conf
boards/arm/imu_mouse/: Kconfig.board  Kconfig.defconfig  imu_mouse.dts  imu_mouse.yaml  imu_mouse_defconfig
imu_mouse/: imu_mouse.dts  imu_mouse.yaml  imu_mouse_defconfig
src/: accel_data.h  battery.c  battery.h  bhi360.c  bhi360.h  bhi360_config.c  bma456.c  bma456.h  bma456_config.c  buttons.c  buttons.h  mouse.c  mouse.h
src/sensor-apis/: bhi3_defs.h  bhy2_defs.h  bma456_an.h  bma4_defs.h
